--- a/styles.css
+++ b/styles.css
@@ -4,86 +4,93 @@
 /*font-family: 'Lato', sans-serif;*/
 @import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 /*font-family: 'Lora', serif;*/
+:root {
+  --primary-light: rgb(87, 58, 26);
+  --primary-dark: rgb(46, 23, 6);
+  --primary-transparent: rgba(99, 46, 10, 0.6);
+  --shadow-color: rgba(46, 43, 43, 0.2);
+  --green-light: rgb(28, 110, 28);
+  --green-dark: rgb(11, 85, 11);
+  --red-light: rgb(207, 24, 24);
+  --red-dark: rgb(134, 13, 13);
+  --light: rgb(224, 224, 224);
+  --dark: rgb(29, 28, 33);
+
+  --spacing-sm: 1rem;
+  --spacing-md: 2rem;
+  --spacing-lg: 2.5rem;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-
 html {
   height: 100%;
 }
-
 body {
   min-height: 100%;
   background-image: url('./img/books.jpg');
   background-position: center 80%;
   background-size: cover;
   background-repeat: no-repeat;
-  background-color: #000007;
+  background-color: var(--primary-dark);
   font-family: 'Lato', sans-serif;
   font-weight: 400;
 }
-
+/**BUTTON**/
 .button {
   border: none;
   font-family: inherit;
   cursor: pointer;
 }
-
 .button:hover {
   transition: all 0.3s ease;
 }
 
-/*
-HEADER
-*/
+/**HEADER**/
 header {
-  background-color: rgba(99, 46, 10, 0.6);
+  background-color: var(--primary-transparent);
   font-family: 'Cedarville Cursive', cursive;
   font-size: 1.5rem;
-  color: white;
-  padding: 0 2.5rem;
+  color: var(--light);
+  padding: 0 var(--spacing-lg);
 }
 
-/*
-MAIN
-*/
+/**MAIN**/
 main {
-  padding: 1rem;
+  padding: var(--spacing-sm);
 }
-
 main #add-book-btn {
   display: block;
   margin: 0 auto;
-  padding: 1rem 2rem;
-  border-radius: 2rem;
+  padding: var(--spacing-sm) var(--spacing-md);
+  border-radius: var(--spacing-md);
   font-size: 1.4rem;
-  background-color: rgb(46, 23, 6);
-  color: white;
+  background-color: var(--primary-dark);
+  color: var(--light);
 }
-
 main #add-book-btn:hover {
-  color: rgb(46, 23, 6);
-  background-color: white;
+  background-color: var(--dark);
 }
-
 main .library {
-  margin-top: 1rem;
+  margin-top: var(--spacing-sm);
   text-align: center;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 1rem;
+  gap: var(--spacing-sm);
 }
 
 .book {
-  background-color: white;
+  background-color: var(--dark);
+  color: var(--light);
   border-radius: 10px;
-  padding: 0.5rem 1rem 1rem 1rem;
+  padding: var(--spacing-sm);
+  padding-top: 0.5rem;
   display: flex;
   flex-direction: column;
 }
-
 .book .close-btn {
   align-self: end;
   background-color: inherit;
@@ -96,104 +103,87 @@ main .library {
   border: none;
   cursor: pointer;
 }
-
 .book .close-btn:hover {
-  background-color: rgba(46, 43, 43, 0.2);
+  background-color: var(--shadow-color);
 }
-
 .book .book-title {
   font-size: 1.5rem;
   font-family: 'Lora', serif;
 }
-
 .book .book-author {
-  margin-bottom: 1rem;
+  margin-bottom: var(--spacing-sm);
   font-size: 1rem;
   font-family: 'Lora', serif;
 }
-
 .book .book-read {
   flex: 1;
-  margin-bottom: 2rem;
+  margin-bottom: var(--spacing-md);
 }
-
 .book .read-btn {
-  margin-top: 1rem;
+  margin-top: var(--spacing-sm);
   padding: 5px;
   font-size: 1rem;
   border-radius: 20px;
-  background-color: rgb(28, 110, 28);
-  color: white;
+  background-color: var(--green-light);
+  color: var(--light);
 }
-
 .book .read-btn:hover {
-  color: rgb(28, 110, 28);
-  background-color: white;
+  background-color: var(--green-dark);
 }
 
-/*
-MODAL
-*/
+/**FORM**/
 #form-modal {
   width: min(90vw, 600px);
   margin: 0 auto;
-  top: 2rem;
+  top: var(--spacing-lg);
   border: none;
   border-radius: 20px;
-  padding: 1rem;
+  padding: var(--spacing-sm);
+  background-color: var(--dark);
+  color: var(--light);
 }
-
 #form-modal::backdrop {
   background-color: rgba(0, 0, 0, 0.55);
 }
-
 #form-modal .modal-title {
   display: flex;
   align-items: center;
   gap: 0.5rem;
   margin-bottom: 0.5rem;
 }
-
 #form-modal .modal-title h2 {
   font-weight: 400;
 }
-
 #form-modal fieldset {
   padding: 1rem;
   border: none;
   border-radius: 20px;
   margin-bottom: .5rem;
-  background-color: rgba(235, 179, 107, 0.555);
+  background-color: var(--primary-light);
 }
-
 #form-modal fieldset label {
   display: block;
   font-size: 1.1rem;
   font-weight: 400;
   margin-bottom: 0.5rem;
 }
-
 #form-modal fieldset input {
   display: block;
   padding: 0.5rem;
   border-radius: 10px;
   border: 1px solid rgba(100, 94, 94, 0.616);
 }
-
 #form-modal fieldset:last-of-type {
   display: flex;
   gap: 1rem;
   align-items: center;
 }
-
 #form-modal fieldset:last-of-type label {
   margin: 0;
 }
-
 #form-modal .modal-buttons {
   display: flex;
 }
-
 #form-modal button {
   flex: 1;
   padding: 0.5rem 1rem;
@@ -202,21 +192,17 @@ MODAL
   cursor: pointer;
   font-size: 1.2rem;
 }
-
 #form-modal button:first-of-type {
   background-color: #cf1818;
   color: white;
 }
-
 #form-modal button:first-of-type:hover {
   background-color: #860d0d;
 }
-
 #form-modal button:last-of-type {
   background-color: #1c6e1c;
   color: white;
 }
-
 #form-modal button:last-of-type:hover {
   background-color: #0b550b;
 }
